# SurgerySchedulingUnderUncertainty

./: .gitignore  README.md  output_esempio.txt  pyproject.toml
.hypothesis/examples/01c2b23b034abfb4/: cc5d541468c0764d  e95c5c84ecfc7e42  f5428409618af04b
.hypothesis/examples/0ba14e79dc083a6d/: 6c6d79976937a972
.hypothesis/examples/106d8313c6f2084a/: 7d6dfec39f42780d
.hypothesis/examples/14fcd65c9f1eff6c/: 01f78882d419eafe  03d906010474124f  095919719e5fcd20  09b70d32988f8550  09bcacca5b72e256  0dcce493298299b6  159554efa1972acc  17f0dd52f1fb887a  18299596c7a41672  1aaf810b42ff5b77  1d7506f7c3fe926a  1e1efad5fb00d0a0  25a9233e2e343885  305a92d2f9180380  351c4ffe70f594d6  3526a2e7f679dcdc  3813d2cd35909533  482462547492bca2  48f5051f5084c22b  49d8957d97411ef8  4bbc31a221cc4b7a  (+87 more)
module/: _datastructures.py  patientprovider.py  predictivemodel.py
notebooks/: series_of_runs.ipynb  single_run copy.ipynb  single_run.ipynb  storytelling.ipynb  tasks_creation.ipynb  testing.ipynb
surgeryschedulingunderuncertainty/: __init__.py  _models_components.py  _probability_utils.py  adversary.py  block.py  implementor.py  master.py  optimizer.py  patient.py  patientprovider.py  patients_provider.py  predictive_model.py  predictivemodel.py  report.py  schedule.py  scheduler.py  task.py  uncertainty_profile.py  uncertaintyprofile  uncertaintyprofile.py
tests/: test_block.py  test_patient_provider.py  test_task.py  test_uncertainty_profile.py
uml/: .$class_diagram.drawio.bkp  .$class_diagram.drawio.dtmp  Sequential.drawio  class_diagram.drawio  sequence_diagram.drawio
(+1055 files in other folders)
