[tool.poetry]
name = "surgeryschedulingunderuncertainty"
version = "0.3.0"
description = "Software for scheduling surgical interventions with optimization methods for robust results."
authors = ["gabryallaseconda <gabriele.gabrielli.96@gmail.com>"]
license = "CC-BY-NC-SA-4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.11"
numpy = "^1.26.3"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
statsmodels = "^0.14.1"
pyomo = "^6.7.0"
highspy = "^1.5.3"
python-dotenv = "^1.0.1"
jupyter = "^1.0.0"
ngboost = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
